syntax = "proto3";

option csharp_namespace = "EventManagementService";

service Communication {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string message = 1;
}
